--- a/model_tests.ipynb
+++ b/model_tests.ipynb
@@ -614,10 +614,10 @@
         "# Função principal\n",
         "def process_review():\n",
         "    # Lê o arquivo usando Polars\n",
-        "    df = pl.read_parquet(\"/content/drive/MyDrive/Models/filtered_reviews.csv\", separator=\";\")\n",
+        "    df = pl.read_csv(\"/content/drive/MyDrive/Models/filtered_reviews.csv\", separator=\";\")\n",
         "\n",
         "    df = df.with_columns(\n",
-        "        pl.lit(None).alias(\"ai_response\")  # Adiciona coluna `llama_response`\n",
+        "        pl.lit(None).alias(\"ai_response\")  # Adiciona coluna para resposta do llama\n",
         "    )\n",
         "\n",
         "    # Carrega o índice do progresso salvo\n",
